OAuth/src/objects/OAuth_Token__c.object
<CustomObject>
    <fields>
        <fullName>OAuth_Service__c</fullName>
        <label>OAuth Service</label>
        <referenceTo>OAuthService__c</referenceTo>
        <relationshipLabel>Tokens</relationshipLabel>
        <relationshipName>Tokens</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Owner__c</fullName>
        <label>Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>OAuth_Tokens</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>isAccess__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If true, this is an access token. If false, it&apos;s a request token</description>
        <inlineHelpText>If true, this is an access token. If false, it&apos;s a request token</inlineHelpText>
        <label>isAccess</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>secret__c</fullName>
        <label>secret</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>token__c</fullName>
        <label>token</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>OAuth Token</label>
    <nameField>
        <label>OAuth Token Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>OAuth Tokens</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>